5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1884_1647.log
== TEST (2019-07-04 18:23:37) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
p = 0
for i in aulas:
	if(i>= 70/100):
		p= p + 1
print(p)
impar= zeros(p,dtype= int)
b = 0
for i in range(size(aulas)):
	if(aulas[i]>= 70/100):
		impar[b]= i
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:52) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(pa)
impar= zeros(p,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[i]>= 70/100):
		impar[b]= i
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:10) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
impar= zeros(p,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[i]>= 70/100):
		impar[b]= i
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:26) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
impar= zeros(pa,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[i]>= 70/100):
		impar[b]= i
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:38) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
impar= zeros(a,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[i]>= 70/100):
		impar[b]= i
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:58) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
impar= zeros(a,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[i]>= 70/100):
		impar[b]= v
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:30:30) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
impar= zeros(a,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[v]>= 70/100):
		impar[b]= v
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:32:38) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
af= zeros(a,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[v]>= 70/100):
		af[b]= v
		b = b + 1
print(impar)
	
-- EXECUTION TIME:
0.953336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/1647/main.py", line 15, in <module>
    print(impar)
NameError: name 'impar' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:38) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
af= zeros(a,dtype= int)
b = 0
for v in range(alunos):
	if(aulas[v]>= 70/100):
		af[b]= v
		b = b + 1
print(impar)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:20) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70/100):
		a = a + 1
print(a)
af= zeros(a,dtype= int)
l = 0
for v in range(alunos):
	if(aulas[v]>= 70/100):
		af[l]= v
		l = l + 1
print(af)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:37:50) 
-- CODE:
from numpy import *
aulas= array(eval(input("digite a frequencia :")))
alunos = size(aulas)
a = 0
for i in range(alunos):
	if(aulas[i]>= 70):
		a = a + 1
print(a)
af= zeros(a,dtype= int)
l = 0
for v in range(alunos):
	if(aulas[v]>= 70):
		af[l]= v
		l = l + 1
print(af)
	
-- EXECUTION TIME:
1.22027
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 6]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
